--- a/index.html
+++ b/index.html
@@ -23,8 +23,69 @@
 </head>
 
 <body>
-    <div id="container1" style="width:100%; height:400px;"></div>
-    <div id="container2" style="width:100%; height:400px;"></div>
+    <header>
+        <div class="navbar navbar-dark bg-dark shadow-sm">
+            <div class="container">
+                <a href="#" class="navbar-brand d-flex align-items-center">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none" stroke="currentColor"
+                        stroke-linecap="round" stroke-linejoin="round" stroke-width="2" aria-hidden="true" class="me-2"
+                        viewBox="0 0 24 24">
+                        <path d="M23 19a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h4l2-3h6l2 3h4a2 2 0 0 1 2 2z">
+                        </path>
+                        <circle cx="12" cy="13" r="4"></circle>
+                    </svg>
+                    <strong>Dashboard</strong>
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarHeader"
+                    aria-controls="navbarHeader" aria-expanded="false" aria-label="teste">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+            </div>
+        </div>
+    </header>
+    <main>
+        <section class="py-5 text-center container">
+            <div class="row py-lg-5">
+                <div class="col-lg-6 col-md-8 mx-auto">
+                    <h1 class="fw-light"> Dashboard </h1>
+                    <p class="lead text-muted">Dashboard</p>
+                    <p>
+                        <a href="#" class="btn btn-primary my-2">Dashboard</a>
+                        <a href="#" class="btn btn-secondary my-2">Dashboard</a>
+                    </p>
+                </div>
+            </div>
+        </section>
+
+        <div class="album py-5 bg-light">
+            <div class="container">
+                <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+                    <div class="col">
+                        <div class="card shadow-sm">
+                            <div width="100%" height="225" id="container2"> </div>
+
+                            <div class="card-body">
+                                <p class="card-text">Relatório Bacana</p>
+                                <div class="d-flex justify-content-between align-items-center">
+                                    <div class="btn-group">
+                                        <button type="button" class="btn btn-sm btn-outline-secondary">Exportar</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </main>
+    <footer class="text-muted py-5">
+        <div class="container">
+            <p class="mb-1">Dashboard criado para aula de Sistema de Apoio a Decisão (SAD).</p>
+            <p class="mb-0">Grupo formador por <a href="https://github.com/fabio-aug">Fábio Augusto</a> e <a
+                    href="https://github.com/luanaassis">
+                    Luana Assis</a>.</p>
+        </div>
+    </footer>
     <!-- JS -->
     <script type="module" src="./js/index.js"></script>
 </body>
