--- a/index.html
+++ b/index.html
@@ -59,22 +59,7 @@
 
         <div class="album py-5 bg-light">
             <div class="container">
-                <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
-                    <div class="col">
-                        <div class="card shadow-sm">
-                            <div width="100%" height="225" id="container2"> </div>
-
-                            <div class="card-body">
-                                <p class="card-text">Relatório Bacana</p>
-                                <div class="d-flex justify-content-between align-items-center">
-                                    <div class="btn-group">
-                                        <button type="button" class="btn btn-sm btn-outline-secondary">Exportar</button>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+                <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3" id="page-container"></div>
             </div>
         </div>
     </main>
