--- a/index.html
+++ b/index.html
@@ -47,7 +47,11 @@
     <main>
         <div class="album py-5 bg-light">
             <div class="container">
-                <div class="row row-cols-1 row-cols-sm-2 row-cols-md-2 g-3" id="page-container"></div>
+                <div
+                    class="row row-cols-1 row-cols-sm-2 row-cols-md-2 g-3"
+                    id="page-container"
+                    style="justify-content: center;"
+                ></div>
             </div>
         </div>
     </main>
