--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
 
     <footer class="text-muted py-5">
         <div class="container">
-            <p class="mb-1">Dashboard criado para aula de Sistema de Apoio a Decisão (SAD).</p>
-            <p class="mb-0">Grupo formador por <a href="https://github.com/fabio-aug">Fábio Augusto</a> e <a
+            <p class="mb-1">Dashboard criado para aula de Sistema de Apoio à Decisão (SAD).</p>
+            <p class="mb-0">Grupo formado por <a href="https://github.com/fabio-aug">Fábio Augusto</a> e <a
                     href="https://github.com/luanaassis">
                     Luana Assis</a>.</p>
         </div>
